# Nebula

./: .gitignore
NebulaVST/: BUILD_GUIDE.md  CMakeLists.txt  README.md
NebulaVST/cmake/: EmbedFile.cmake
NebulaVST/src/dsp/: Chorus.h  Delay.h  Envelope.h  Lfo.h  PolyBlepOsc.h  Reverb.h  SvfFilter.h  Voice.cpp  Voice.h
NebulaVST/src/gui/: synth.html
NebulaVST/src/plugin/: NebulaController.cpp  NebulaController.h  NebulaEditor.cpp  NebulaEditor.h  NebulaFactory.cpp  NebulaProcessor.cpp  NebulaProcessor.h  ParameterIds.h
NebulaVST_update/: INSTALL.txt
NebulaVST_update/src/dsp/: Chorus.h  Delay.h  Drive.h  Envelope.h  Lfo.h  Noise.h  PolyBlepOsc.h  Reverb.h  SvfFilter.h  Voice.cpp  Voice.h
NebulaVST_update/src/gui/: synth.html
NebulaVST_update/src/plugin/: NebulaController.cpp  NebulaController.h  NebulaEditor.cpp  NebulaEditor.h  NebulaProcessor.cpp  NebulaProcessor.h  ParameterIds.h
